<resources>
    <string name="app_name">YadSarah</string>
    <string name="rehabilitationTextView">The rehabilitation center Yad Sarah is designed to provide individuals with physical disabilities and rehabilitation potential a unique, supportive, and warm environment.\n\nIts aim is to expedite their recovery and restore their maximum independence.\n\nThe rehabilitation program includes therapeutic and empowerment interventions, utilizing the existing resources within the individual and their environment. The goal is to equip them for enjoyable social engagement and self-management in their daily lives at home and in the community.\n\nFor each rehabilitant, a personalized rehabilitation plan is tailored to their specific limitations and abilities, with the objective of promoting their self-functioning to the fullest extent possible.\n\nThe rehabilitation center offers a wide range of professional treatments in physical, emotional, and social domains, including physiotherapy, occupational therapy, speech therapy, emotional and cognitive therapies, computer-assisted therapy, and sports therapy.\n\nAdditionally, the center organizes various social activities such as lectures, trips, and educational sessions on current topics and holidays.</string>
    <string name="paragraph_text">Volunteers from the Home Care Department of Yad Sarah are dedicated to preventing public healthcare burdens such as infections, contagion, geriatric mental health issues, and lack of motivation for recovery.\n\nBy providing a comprehensive response, patients can heal in the comfort of their own homes with the support of their families. Without complications and with a much more efficient medical response.\n\nPatients who are bedridden at home can request a free home hospitalization room that includes an adjustable bed, a patient lift, and a medical armchair. This is in addition to other items provided at Yad Sarah branches, such as an oxygen generator, infusion stand, and more.</string>
    <string name="tilt_back_wheelchair">A reclining wheelchair with adjustable backrest is a wheelchair that has a reclining feature where the backrest can be tilted and adjusted between 90-180 degrees in relation to the seat. This type of wheelchair is designed for individuals who are unable to sit upright or require a straight angle for their legs, or for those who spend extended periods of time in a wheelchair and wish to have the option to relax and rest in it.</string>
    <string name="scooter">The knee scooter, also known as the "CorKinet," resembles a four-wheeled bicycle for children. The injured leg is placed on it, and the user propels the knee scooter forward using the handlebar. The CorKinet provides high mobility for individuals with one leg impairment, both indoors and outdoors. It is suitable for cases of single-leg disability, such as a leg fracture, post-surgery recovery, leg amputation, foot problems, and pain.</string>
    <string name="treadmill_for_adults">The non-folding forearm walker with wheels is designed for individuals who require support and stability while walking and are unable to bend their knees. The walker features armrests that assist with gripping and walking. The telescopic design of the forearm walker allows for adjustment to accommodate the desired height of the user.</string>
    <string name="children_wheelchair">A wheelchair for children is a standard wheelchair with a width of 36 cm, which is suitable for children (there is also a 32 cm wide wheelchair available for younger children). The wheelchair is designed for individuals with a small body size, whether they are children or adults, who have temporary or permanent mobility limitations. The wheelchair is suitable for both indoor and outdoor use. The children\'s wheelchair is suitable for self-propulsion by the occupant or for being pushed by a caregiver.</string>
    <string name="elevator">A powered stairlift chair is designed to ascend and descend stairs, enabling individuals who cannot do so independently to safely and easily navigate stairs without the need for physical assistance. The chair allows people to be effortlessly guided up and down stairs, providing security and confidence.</string>
    <string name="canadian_crutches">Telescopic crutches provide support when one leg is limited or injured, such as when a leg is fractured and requires reduced weight-bearing. Telescopic crutches are considered to be the safest option as they distribute the weight on the forearm rather than the shoulder. There are three sizes available: for children and shorter individuals, standard size for adults, and extra-tall for taller individuals.</string>
    <string name="walking_stick_with_seat">A walking cane with a seat provides support and assistance for individuals who need light assistance while walking and require occasional rest, such as during shopping. The cane is telescopic and adjustable to accommodate various heights. When needed, the cane can be unfolded into three legs, with a seat positioned on top for resting</string>
    <string name="four_wheel_rollator_with_chair">The square-shaped four-wheel rollator provides support and assistance with weight distribution for mobility. It is designed for independent individuals and is suitable for both indoor and outdoor use. Many models include a seat for resting. Rollators typically have brakes for added safety. These rollators are foldable and do not take up much space in the house. They can also easily fit into the trunk of a car.</string>
    <string name="adult_resistance">An adult standing frame is a device that allows individuals with disabilities or limited physical ability to stand upright when they are unable to do so independently. The standing frame provides stable support and assists individuals in maintaining an upright position. It is designed for rehabilitation exercises and helps individuals gradually transition from sitting or lying down to a standing position, providing support to relevant body parts throughout the process. Additionally, the standing frame facilitates transfers from a chair or bed to a standing position and vice versa.</string>
    <string name="bath_chair_and_toilet_on_wheels">A wheelchair with toilet and shower facilities, designed for individuals with mobility limitations, ensures their mobility, hygiene, dignity, and independence even in restricted situations. The wheelchair is sturdy and of high quality, suitable for washing, and can be positioned over a toilet. It also serves as a bedside commode if the bucket is included with the purchase.</string>
    <string name="commode_toilet_chair">The commode chair serves as an assistive device for transferring and the supportive handles aid the user in both sitting down and standing up. The commode is highly convenient as a shower chair and can be easily washed. It enables the user to move with dignity and safety, whether next to a bed or in the bathroom.</string>
    <string name="night_pot">A multi-use night pot for adults is hygienic and comfortable for both men and women. In cases of severe mobility limitations, one can use a "night pot" or a urinal bottle for men. In cases of partial mobility limitations, one can use a wheeled commode chair with an opening, placed next to the bed. It allows the user to access the toilet without the need to stand up and sit down. Additionally, a pot can be added to the commode chair, serving as a bedside toilet.</string>
    <string name="bathroom_bench">A bathtub shower seat assists in providing a secure sitting position for the bather inside the bathtub. The shower seat is highly stable and easily "settles" onto the bathtub, providing confidence and stability for the bather.The shower seat is designed to fit onto the bathtub and is made of plastic with holes through which water can flow, allowing for a pleasant and safe bathing experience.</string>
    <string name="bottle_of_man_urine">A bedside commode for adults is used for personal hygiene by individuals who are independent but have difficulty getting out of bed or have mobility limitations in various circumstances.A urinal bottle is a reusable, multi-purpose container with a lid specifically designed for male use. It assists individuals in managing their urinary needs while maintaining hygiene and convenience.</string>
    <string name="headForHealthy">The Center for Healthy Activity</string>
    <string name="hi_dear_employee">Hi Dear employee!</string>
    <string name="todo">TODO</string>
    <string name="your_role_at_yad_sarah_is_invaluable_and_we_want_to_express_our_deepest_appreciation_for_your_compassion_skill_and_dedication_thank_you_for_being_an_incredible_force_for_good">Your role at Yad Sarah is invaluable, and we want to express our deepest appreciation for your compassion, skill, and dedication. Thank you for being an incredible force for good.</string>
    <string name="salary_calculator">Salary Calculator</string>
    <string name="no_of_hours">No of hours:</string>
    <string name="hourly_rate">Hourly rate:</string>
    <string name="calculate_payment_and_tax">Calculate Payment and Tax</string>
    <string name="payment">Payment:</string>
    <string name="overtime_payment">Overtime payment:</string>
    <string name="tax">Tax:</string>
    <string name="total_payment">Total payment:</string>
    <string name="the_center_of_healthy_activity">The Center Of Healthy Activity</string>
    <string name="at_the_fitness_center_there_are_professional_and_specialized_exercise_and_fitness_equipment_that_allow_everyone_to_maintain_their_health_n_certified_fitness_trainers_prepare_personalized_training_programs_for_each_athlete_even_if_they_have_disabilities_medical_issues_or_emotional_challenges_n_in_addition_to_hands_on_guidance_at_the_fitness_facilities_the_center_s_trainers_also_provide_information_on_additional_equipment_that_individuals_can_ask_about_to_improve_their_health_at_home">At the fitness center, there are professional and specialized exercise and fitness equipment that allow everyone to maintain their health.\n Certified fitness trainers prepare personalized training programs for each athlete, even if they have disabilities, medical issues, or emotional challenges.\n In addition to hands-on guidance at the fitness facilities, the center\'s trainers also provide information on additional equipment that individuals can ask about to improve their health at home.</string>
    <string name="men_n_a_15_45_18_30_n_c_10_45_12_45_15_45_18_30_n_e_15_45_18_30_n_women_n_b_12_45_14_45_n_c_8_30_10_30_n_e_12_00_14_30">Men:\n A: 15:45-18:30\n C: 10:45-12:45, 15:45-18:30\n E: 15:45-18:30\n Women:\n B: 12:45-14:45\n C: 8:30-10:30\n E: 12:00-14:30</string>
    <string name="yad_sarah_house_herzl_blvd_124_jerusalem_1st_floor">Yad Sarah House, Herzl Blvd. 124, Jerusalem - 1st floor.</string>
    <string name="shift_date">shift Date</string>
    <string name="add_shift">Add shift</string>
    <string name="remove_shift">Remove shift</string>
    <string name="select_date">select Date</string>
    <string name="shift_id">Shift ID</string>
    <string name="start_hour">Start Hour</string>
    <string name="end_hour">End Hour</string>
    <string name="id">ID</string>
    <string name="name">name</string>
    <string name="hour_paid">Hour paid</string>
    <string name="employees_data">Employees data</string>
    <string name="remove">remove</string>
    <string name="edit">edit</string>
    <string name="view_all_employees">view all employees</string>
</resources>