<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/no_of_hours"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/num_hours_input"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hourly_rate"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hourly_rate_input"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:onClick="calculation"
        android:text="@string/calculate_payment_and_tax" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#980808" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/payment_out"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/overtime_payment"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/overtime_out"
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tax"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tax_out"
            android:layout_width="133dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_payment"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_out"
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>